Clean up Spring utility imports and fix stale date in AgentService
- Replace Spring StringUtils/CollectionUtils with Apache Commons equivalents
  (StringUtils.isNotBlank, CollectionUtils.isEmpty) for consistency with
  CLAUDE.md conventions
- Fix AgentService SYSTEM_PROMPT: LocalDate.now() was evaluated once at
  class load time; now formatted at each call site so the date stays current
- Use Expense::getId method reference instead of lambda in ReceiptService