@@ -3,6 +3,7 @@ package com.bookie.controller;
 import com.bookie.service.AgentService;
 import java.util.Map;
 import lombok.RequiredArgsConstructor;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.web.bind.annotation.*;
 
 @RestController
@@ -15,7 +16,7 @@ public class AgentController {
   @PostMapping("/expense")
   public AgentService.AgentResponse submitExpense(@RequestBody Map<String, String> body) {
     String message = body.get("message");
-    if (message == null || message.isBlank()) {
+    if (StringUtils.isBlank(message)) {
       throw new IllegalArgumentException("Message cannot be empty");
     }
     return agentService.processExpenseMessage(message);
